test/error/OpModZero.fu
public static class Test
{
	public static bool Run()
	{
		return 5 % 0; //ERROR: Mod zero
	}
}
